src/test/fail/condition_without_value.lly
#[
SyntaxError: Conditional expression has no value.
Where: File "test/fail/condition_without_value.lly" at line 7
]#

define f() {}
if f():
    f()
